kubernetes/cluster/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.iac.gg/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames: ["hubble.${NEW_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
